AS-4166 (CYA update) and some other fixes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -416,7 +416,7 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (17)
+                        Jira Tickets (19)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
@@ -438,6 +438,7 @@
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4140" target="_blank">AS-4140 Consolidate EIA questions/flow</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4141" target="_blank">AS-4141 Design consistent h1s for upload screens</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4157" target="_blank">AS-4157 Emerging plan documents</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4166" target="_blank">AS-4166 Update "Check your answers" with all updates to v2 of full planning LPA questionnaire prototype</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4172" target="_blank">AS-4172 Reset routing for v2 based on flow in Miro</a></li>
                       </ul>
                     </div>
