--- a/app/views/lpa-questionnaire/fullv2/additional-info/nearby-appeals.html
+++ b/app/views/lpa-questionnaire/fullv2/additional-info/nearby-appeals.html
@@ -39,7 +39,8 @@
             },
             hint: {
               text: "You can enter more than one, separated by commas"
-            }
+            },
+            value: data["lpaq-"+version+"-additionalinfo-nearbyappeals-references"]
           }) }}
         {% endset -%}
 
