--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/involves-listed-building-details.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/involves-listed-building-details.html
@@ -67,7 +67,7 @@
           <div id="contact-hint" class="govuk-hint">
             Drag and drop or choose a file
           </div>
-          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-constraintsdesignations-listedbuildingdetails-upload" name="lpaq{{version}}-constraintsdesignations-listedbuildingdetails-upload" type="file">
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-constraintsdesignations-listedbuildingdetails-upload" name="lpaq-{{version}}-constraintsdesignations-listedbuildingdetails-upload" type="file">
         </div>
 
         {{ govukDetails({
