--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/consultation-responses.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/consultation-responses.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Upload consultation responses about the environmental statement - Tell us if it's an environmental impact assessment development - {{serviceName}} - GOV.UK
+  Upload consultation responses for the environmental statement - Tell us if it's an environmental impact assessment development - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,7 +29,7 @@
           Tell us if it's an environmental impact assessment development
         </span>
         <h1 class="govuk-heading-xl">
-          Upload consultation responses about the environmental statement
+          Upload consultation responses for the environmental statement
         </h1>
         <p class="govuk-body">
           These can be from both statutory and non-statutory consultees.
