--- a/app/views/lpa-questionnaire/fullv2/relevant-policies/planning-officers-report.html
+++ b/app/views/lpa-questionnaire/fullv2/relevant-policies/planning-officers-report.html
@@ -36,6 +36,30 @@
         <p class="govuk-body">
           Upload the Planning Officer's report to committee or delegated report on the application, and any other relevant documents or minutes.
         </p>
+
+        {% if data["lpaq-"+version+"-relevantpolicies-planningofficersreport"] %}
+          {% if data["lpaq-"+version+"-relevantpolicies-planningofficersreport"] != "" %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Uploaded files
+            </h3>
+            {% if data["lpaq-"+version+"-relevantpolicies-planningofficersreport"]|is_string %}
+              <p class="govuk-body">
+                <a href="javascript:preventDefault();" class="govuk-link">{{ data["lpaq-"+version+"-relevantpolicies-planningofficersreport"] }}</a>
+              </p>
+            {% else %}
+              <ul class="govuk-list">
+                {% for item in data["lpaq-"+version+"-relevantpolicies-planningofficersreport"] %}
+                  <li>
+                    <a href="javascript:preventDefault();" class="govuk-link">{{ item }}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Upload more files
+            </h3>
+          {% endif %}
+        {% endif %}
       
         <div class="govuk-form-group">
           <label class="govuk-label" for="lpaq-{{version}}-relevantpolicies-planningofficersreport">
