--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/conservation-area-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/conservation-area-upload.html
@@ -32,6 +32,30 @@
         <h1 class="govuk-heading-xl">
           Upload the conservation area's documentation
         </h1>
+
+        {% if data["lpaq-"+version+"-constraintsdesignations-conservationarea-upload"] %}
+          {% if data["lpaq-"+version+"-constraintsdesignations-conservationarea-upload"] != "" %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Uploaded files
+            </h3>
+            {% if data["lpaq-"+version+"-constraintsdesignations-conservationarea-upload"]|is_string %}
+              <p class="govuk-body">
+                <a href="javascript:preventDefault();" class="govuk-link">{{ data["lpaq-"+version+"-constraintsdesignations-conservationarea-upload"] }}</a>
+              </p>
+            {% else %}
+              <ul class="govuk-list">
+                {% for item in data["lpaq-"+version+"-constraintsdesignations-conservationarea-upload"] %}
+                  <li>
+                    <a href="javascript:preventDefault();" class="govuk-link">{{ item }}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Upload more files
+            </h3>
+          {% endif %}
+        {% endif %}
       
         <div class="govuk-form-group">
           <label class="govuk-label" for="lpaq-{{version}}-constraintsdesignations-conservationarea-upload">
