--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/involves-listed-building-details.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/involves-listed-building-details.html
@@ -60,9 +60,24 @@
           ]
         }) }}
 
+        {% if data["lpaq-"+version+"-constraintsdesignations-listedbuildingdetails-upload"] %}
+          {% if data["lpaq-"+version+"-constraintsdesignations-listedbuildingdetails-upload"] != "" %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Uploaded listing description
+            </h3>
+            <p class="govuk-body govuk-!-margin-bottom-8">
+              <a href="javascript:preventDefault();" class="govuk-link">{{ data["lpaq-"+version+"-constraintsdesignations-listedbuildingdetails-upload"] }}</a>
+            </p>
+          {% endif %}
+        {% endif %}
+
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-constraintsdesignations-listedbuildingdetails-upload">
-            Upload the listing description
+            {% if data["lpaq-{{version}}-constraintsdesignations-listedbuildingdetails-upload"] != "" %}
+              Replace the listing description
+            {% else %}
+              Upload the listing description
+            {% endif %}
           </label>
           <div id="contact-hint" class="govuk-hint">
             Drag and drop or choose a file
