--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/rightofway-details.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/rightofway-details.html
@@ -31,6 +31,30 @@
         <h1 class="govuk-heading-xl">
           Upload the definitive map and statement extract
         </h1>
+
+        {% if data["lpaq-"+version+"-constraintsdesignations-rightofway-mapstatement"] %}
+          {% if data["lpaq-"+version+"-constraintsdesignations-rightofway-mapstatement"] != "" %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Uploaded files
+            </h3>
+            {% if data["lpaq-"+version+"-constraintsdesignations-rightofway-mapstatement"]|is_string %}
+              <p class="govuk-body">
+                <a href="javascript:preventDefault();" class="govuk-link">{{ data["lpaq-"+version+"-constraintsdesignations-rightofway-mapstatement"] }}</a>
+              </p>
+            {% else %}
+              <ul class="govuk-list">
+                {% for item in data["lpaq-"+version+"-constraintsdesignations-rightofway-mapstatement"] %}
+                  <li>
+                    <a href="javascript:preventDefault();" class="govuk-link">{{ item }}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Upload more files
+            </h3>
+          {% endif %}
+        {% endif %}
       
         <div class="govuk-form-group">
           <label class="govuk-label" for="lpaq-{{version}}-constraintsdesignations-rightofway-mapstatement">
