--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/site-notice-advert.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/site-notice-advert.html
@@ -34,6 +34,30 @@
         <p class="govuk-body">
           This is different to the site notice or advertisement for the application.
         </p>
+
+        {% if data["lpaq-"+version+"-environmentalimpact-sitenoticeadvert"] %}
+          {% if data["lpaq-"+version+"-environmentalimpact-sitenoticeadvert"] != "" %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Uploaded files
+            </h3>
+            {% if data["lpaq-"+version+"-environmentalimpact-sitenoticeadvert"]|is_string %}
+              <p class="govuk-body">
+                <a href="javascript:preventDefault();" class="govuk-link">{{ data["lpaq-"+version+"-environmentalimpact-sitenoticeadvert"] }}</a>
+              </p>
+            {% else %}
+              <ul class="govuk-list">
+                {% for item in data["lpaq-"+version+"-environmentalimpact-sitenoticeadvert"] %}
+                  <li>
+                    <a href="javascript:preventDefault();" class="govuk-link">{{ item }}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Upload more files
+            </h3>
+          {% endif %}
+        {% endif %}
       
         <div class="govuk-form-group">
           <label class="govuk-label" for="lpaq-{{version}}-environmentalimpact-sitenoticeadvert">
