--- a/app/views/lpa-questionnaire/fullv2/notified-people/notify-application-letters.html
+++ b/app/views/lpa-questionnaire/fullv2/notified-people/notify-application-letters.html
@@ -32,6 +32,30 @@
         <h1 class="govuk-heading-xl">
           Upload your letter to the neighbours, and their addresses
         </h1>
+
+        {% if data["lpaq-"+version+"-notifiedpeople-notifyapplication-letters"] %}
+          {% if data["lpaq-"+version+"-notifiedpeople-notifyapplication-letters"] != "" %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Uploaded file
+            </h3>
+            {% if data["lpaq-"+version+"-notifiedpeople-notifyapplication-letters"]|is_string %}
+              <p class="govuk-body">
+                <a href="javascript:preventDefault();" class="govuk-link">{{ data["lpaq-"+version+"-notifiedpeople-notifyapplication-letters"] }}</a>
+              </p>
+            {% else %}
+              <ul class="govuk-list">
+                {% for item in data["lpaq-"+version+"-notifiedpeople-notifyapplication-letters"] %}
+                  <li>
+                    <a href="javascript:preventDefault();" class="govuk-link">{{ item }}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Replace file
+            </h3>
+          {% endif %}
+        {% endif %}
       
         <div class="govuk-form-group">
           <label class="govuk-label" for="lpaq-{{version}}-notifiedpeople-notifyapplication-letters">
