--- a/app/views/lpa-questionnaire/fullv2/relevant-policies/emerging-plan-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/relevant-policies/emerging-plan-upload.html
@@ -63,6 +63,30 @@
           summaryText: "What you must include in the summary",
           html: summaryHtml
         }) }}
+
+        {% if data["lpaq-"+version+"-relevantpolicies-emergingplan-upload"] %}
+          {% if data["lpaq-"+version+"-relevantpolicies-emergingplan-upload"] != "" %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Uploaded files
+            </h3>
+            {% if data["lpaq-"+version+"-relevantpolicies-emergingplan-upload"]|is_string %}
+              <p class="govuk-body">
+                <a href="javascript:preventDefault();" class="govuk-link">{{ data["lpaq-"+version+"-relevantpolicies-emergingplan-upload"] }}</a>
+              </p>
+            {% else %}
+              <ul class="govuk-list">
+                {% for item in data["lpaq-"+version+"-relevantpolicies-emergingplan-upload"] %}
+                  <li>
+                    <a href="javascript:preventDefault();" class="govuk-link">{{ item }}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Upload more files
+            </h3>
+          {% endif %}
+        {% endif %}
       
         <div class="govuk-form-group">
           <label class="govuk-label" for="lpaq-{{version}}-relevantpolicies-emergingplan-upload">
