--- a/app/views/lpa-questionnaire/fullv2/representations/letter-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/representations/letter-upload.html
@@ -31,9 +31,33 @@
         <h1 class="govuk-heading-xl">
           Notifying interested parties about this appeal
         </h1>
-        <h2 class="govuk-heading-m">
+        <h2 class="govuk-heading-l">
           Upload your letter to interested parties, and their addresses
         </h2>
+
+        {% if data["lpaq-"+version+"-representations-letter-upload"] %}
+          {% if data["lpaq-"+version+"-representations-letter-upload"] != "" %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Uploaded files
+            </h3>
+            {% if data["lpaq-"+version+"-representations-letter-upload"]|is_string %}
+              <p class="govuk-body">
+                <a href="javascript:preventDefault();" class="govuk-link">{{ data["lpaq-"+version+"-representations-letter-upload"] }}</a>
+              </p>
+            {% else %}
+              <ul class="govuk-list">
+                {% for item in data["lpaq-"+version+"-representations-letter-upload"] %}
+                  <li>
+                    <a href="javascript:preventDefault();" class="govuk-link">{{ item }}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">
+              Upload more files
+            </h3>
+          {% endif %}
+        {% endif %}
         
         <div class="govuk-form-group">
           <label class="govuk-label" for="lpaq-{{version}}-representations-letter-upload">
