AS-4199 Check and correct all skip question links in v2

--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/consultation-responses.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/consultation-responses.html
@@ -89,7 +89,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="environmental-statement">Skip this question</a>
+          <a class="govuk-link" href="site-notice-advert">Skip this question</a>
         </div>
 
       </form>
