--- a/app/views/lpa-questionnaire/fullv2/relevant-policies/planning-officers-report.html
+++ b/app/views/lpa-questionnaire/fullv2/relevant-policies/planning-officers-report.html
@@ -91,7 +91,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="plans-documents-drawings">Skip this question</a>
+          <a class="govuk-link" href="statutory-development">Skip this question</a>
         </div>
 
       </form>
