--- a/app/views/lpa-questionnaire/fullv2/relevant-policies/statutory-development.html
+++ b/app/views/lpa-questionnaire/fullv2/relevant-policies/statutory-development.html
@@ -87,7 +87,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="neighbourhood-plan">Skip this question</a>
+          <a class="govuk-link" href="emerging-plan">Skip this question</a>
         </div>
 
       </form>
