--- a/app/views/lpa-questionnaire/fullv2/additional-info/nearby-appeals.html
+++ b/app/views/lpa-questionnaire/fullv2/additional-info/nearby-appeals.html
@@ -75,7 +75,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="green-belt">Skip this question</a>
+          <a class="govuk-link" href="statement-of-case">Skip this question</a>
         </div>
 
       </form>
