--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/ancient-monument.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/ancient-monument.html
@@ -57,7 +57,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="protected-species">Skip this question</a>
+          <a class="govuk-link" href="conservation-area">Skip this question</a>
         </div>
 
       </form>
