--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/conservation-area-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/conservation-area-upload.html
@@ -87,7 +87,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="aonb">Skip this question</a>
+          <a class="govuk-link" href="protected-species">Skip this question</a>
         </div>
 
       </form>
