--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/designated-site.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/designated-site.html
@@ -101,7 +101,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="affects-listed-building">Skip this question</a>
+          <a class="govuk-link" href="tpo">Skip this question</a>
         </div>
 
       </form>
