--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/green-belt.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/green-belt.html
@@ -58,7 +58,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="conservation-area">Skip this question</a>
+          <a class="govuk-link" href="aonb">Skip this question</a>
         </div>
 
       </form>
