--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/involves-listed-building.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/involves-listed-building.html
@@ -57,7 +57,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="traveller">Skip this question</a>
+          <a class="govuk-link" href="affects-listed-building">Skip this question</a>
         </div>
 
       </form>
