--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/protected-species.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/protected-species.html
@@ -57,7 +57,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="../task-list">Skip this question</a>
+          <a class="govuk-link" href="green-belt">Skip this question</a>
         </div>
 
       </form>
