--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/rightofway-details.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/rightofway-details.html
@@ -86,7 +86,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="tpo">Skip this question</a>
+          <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
 
       </form>
