--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/applicant-environmental-statement.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/applicant-environmental-statement.html
@@ -57,7 +57,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="notifications-consultations">Skip this question</a>
+          <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
 
       </form>
