--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/description-of-development.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/description-of-development.html
@@ -114,7 +114,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="screening-opinion">Skip this question</a>
+          <a class="govuk-link" href="sensitive-area">Skip this question</a>
         </div>
 
       </form>
