--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/schedule.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/schedule.html
@@ -84,7 +84,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="screening-opinion">Skip this question</a>
+          <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
 
       </form>
