--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/screening-direction.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/screening-direction.html
@@ -62,7 +62,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="environmental-statement">Skip this question</a>
+          <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
 
       </form>
