--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/screening-opinion-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/screening-opinion-upload.html
@@ -86,7 +86,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="environmental-statement">Skip this question</a>
+          <a class="govuk-link" href="screening-opinion-es">Skip this question</a>
         </div>
 
       </form>
