--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/sensitive-area.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/sensitive-area.html
@@ -71,7 +71,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="screening-opinion">Skip this question</a>
+          <a class="govuk-link" href="column-two">Skip this question</a>
         </div>
 
       </form>
