Updated home page with Jira ticket links for full LPA questionnaire v2

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -416,7 +416,7 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (19)
+                        Jira Tickets (21)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
@@ -440,6 +440,8 @@
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4157" target="_blank">AS-4157 Emerging plan documents</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4166" target="_blank">AS-4166 Update "Check your answers" with all updates to v2 of full planning LPA questionnaire prototype</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4172" target="_blank">AS-4172 Reset routing for v2 based on flow in Miro</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4193" target="_blank">AS-4193 Interaction design for file uploads without delete functionality</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4199" target="_blank">AS-4199 Check and correct all skip question links in v2</a></li>
                       </ul>
                     </div>
                   </details>
