Update to status of Full planning LPA questionnaire - Version 2

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -380,8 +380,8 @@
                 <div class="govuk-inset-text govuk-!-margin-top-0">
 
                   {{ govukTag({
-                    classes: "govuk-tag--red govuk-!-margin-bottom-3",
-                    text: "WIP"
+                    classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                    text: "Ready for UR"
                   }) }}
                   <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                     Full planning LPA questionnaire - Version 2
