Changed start email to go straight to task list for UR

--- a/app/views/lpa-questionnaire/fullv2/email/started-refusal.html
+++ b/app/views/lpa-questionnaire/fullv2/email/started-refusal.html
@@ -46,7 +46,7 @@
 
     <h3 class="govuk-heading-s">Submit your questionnaire</h3>
     <p class="govuk-body">Your deadline is {{ 7 | daysInFuture }}.</p>
-    <p class="govuk-body">Complete the questionnaire by following this link: <a href="/lpa-questionnaire/fullv2/security/email">https://www.link.com/complete-the-questionnaire</a></p>
+    <p class="govuk-body">Complete the questionnaire by following this link: <a href="../task-list">https://www.link.com/complete-the-questionnaire</a></p>
     <p class="govuk-body">Once you've submitted your questionnaire, you need to email a copy to the appellant at: appellant@email.com</p>
 
     <h3 class="govuk-heading-s">Notify interested parties about the appeal</h3>
