--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/affects-listed-building-details.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/affects-listed-building-details.html
@@ -61,20 +61,18 @@
           ]
         }) }}
 
-        {% if data["lpaq-"+version+"-constraintsdesignations-affectslistedbuilding-upload"] %}
-          {% if data["lpaq-"+version+"-constraintsdesignations-affectslistedbuilding-upload"] != "" %}
-            <h3 class="govuk-heading-m govuk-!-margin-top-8">
-              Uploaded listing description
-            </h3>
-            <p class="govuk-body govuk-!-margin-bottom-8">
-              <a href="javascript:preventDefault();" class="govuk-link">{{ data["lpaq-"+version+"-constraintsdesignations-affectslistedbuilding-upload"] }}</a>
-            </p>
-          {% endif %}
+        {% if data["lpaq-"+version+"-constraintsdesignations-affectslistedbuilding-upload"] or data["lpaq-"+version+"-constraintsdesignations-affectslistedbuilding-upload"] != "" %}
+          <h3 class="govuk-heading-m govuk-!-margin-top-8">
+            Uploaded listing description
+          </h3>
+          <p class="govuk-body govuk-!-margin-bottom-8">
+            <a href="javascript:preventDefault();" class="govuk-link">{{ data["lpaq-"+version+"-constraintsdesignations-affectslistedbuilding-upload"] }}</a>
+          </p>
         {% endif %}
 
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-constraintsdesignations-affectslistedbuilding-upload">
-            {% if data["lpaq-{{version}}-constraintsdesignations-affectslistedbuilding-upload"] != "" %}
+            {% if data["lpaq-{{version}}-constraintsdesignations-affectslistedbuilding-upload"] or data["lpaq-{{version}}-constraintsdesignations-affectslistedbuilding-upload"] != "" %}
               Replace the listing description
             {% else %}
               Upload the listing description
