--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/schedule.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/schedule.html
@@ -35,7 +35,7 @@
             name: "lpaq-"+version+"-environmentalimpact-schedule-type",
             fieldset: {
               legend: {
-                text: "Which schedule is the development?"
+                text: "Is the development a schedule 1 or 2 development?"
               }
             },
             items: [
