Added exclusive checkbox behaviour to designated site

--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/designated-site.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/designated-site.html
@@ -92,7 +92,8 @@
             {
               value: "No, it is not in, near or likely to affect any designated sites",
               text: "No, it is not in, near or likely to affect any designated sites",
-              checked: checked("lpaq-"+version+"-constraintsdesignations-designatedsite", "No, it is not in, near or likely to affect any designated sites")
+              checked: checked("lpaq-"+version+"-constraintsdesignations-designatedsite", "No, it is not in, near or likely to affect any designated sites"),
+              behaviour: "exclusive"
             }
           ]
         }) }}
