Additional content fixes following UR

--- a/app/views/lpa-questionnaire/fullv2/check-your-answers.html
+++ b/app/views/lpa-questionnaire/fullv2/check-your-answers.html
@@ -1003,7 +1003,7 @@
         {% if data["lpaq-"+version+"-relevantpolicies-cil"] == "Yes" %}
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Emerging plan and supporting information
+              Community infractstructure levy details
             </dt>
             <dd class="govuk-summary-list__value">
               <p class="govuk-body">
