--- a/app/views/lpa-questionnaire/fullv2/relevant-policies/cil-details.html
+++ b/app/views/lpa-questionnaire/fullv2/relevant-policies/cil-details.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Community infrastructure levy details - Upload the Planning Officer's report and relevant policies - {{serviceName}} - GOV.UK
+  Upload your community infrastructure levy - Upload the Planning Officer's report and relevant policies - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -30,7 +30,7 @@
           Upload the Planning Officer's report and relevant policies
         </span>
         <h1 class="govuk-heading-xl">
-          Community infrastructure levy details
+          Upload your community infrastructure levy
         </h1>
 
         {% if data["lpaq-"+version+"-relevantpolicies-cil-upload"] %}
