--- a/app/views/lpa-questionnaire/fullv2/relevant-policies/statutory-development.html
+++ b/app/views/lpa-questionnaire/fullv2/relevant-policies/statutory-development.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Upload extracts from the relevant statutory development plan policies - Upload the Planning Officer's report and relevant policies - {{serviceName}} - GOV.UK
+  Upload relevant policies from your statutory development plan - Upload the Planning Officer's report and relevant policies - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -30,7 +30,7 @@
           Upload the Planning Officer's report and relevant policies
         </span>
         <h1 class="govuk-heading-xl">
-          Upload extracts from the relevant statutory development plan policies
+          Upload relevant policies from your statutory development plan
         </h1>
 
         {% if data["lpaq-"+version+"-relevantpolicies-statutorydevelopment"] %}
