--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/conservation-area-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/conservation-area-upload.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Upload the conservation area's documentation - Is the appeal site in or next to a conservation area? - Tell us about constraints, designations and other issues - {{serviceName}} - GOV.UK
+  Upload the conservation area map and guidance - Is the appeal site in or next to a conservation area? - Tell us about constraints, designations and other issues - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -11,7 +11,7 @@
     tag: {
       text: "Beta"
     },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
   {{ govukBackLink({
     text: "Back",
@@ -30,7 +30,7 @@
           Tell us about constraints, designations and other issues
         </span>
         <h1 class="govuk-heading-xl">
-          Upload the conservation area's documentation
+          Upload the conservation area map and guidance
         </h1>
 
         {% if data["lpaq-"+version+"-constraintsdesignations-conservationarea-upload"] %}
