Content update on description of development

--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/description-of-development.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/description-of-development.html
@@ -40,7 +40,7 @@
           items: [
             {
               value: "",
-              text: "Select a category"
+              text: "Select the description of development"
             },
             {
               value: "1. Agriculture and aquaculture",
