Minor content fix on task list

--- a/app/views/lpa-questionnaire/fullv2/task-list.html
+++ b/app/views/lpa-questionnaire/fullv2/task-list.html
@@ -204,7 +204,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="additional-info/nearby-appeals" class="govuk-link">
-                  Provide additional information for the inspector
+                  Provide additional information for the Inspector
                 </a>
               </span>
               {% if data["lpaq-"+version+"-taskliststatus-additionalinfo"] == "Complete" %}
