--- a/app/views/lpa-questionnaire/fullv2/additional-info/extra-conditions.html
+++ b/app/views/lpa-questionnaire/fullv2/additional-info/extra-conditions.html
@@ -37,7 +37,7 @@
           You need to tell us about any extra conditions that you'd like the Inspector to apply if they allow the appeal.
         </p>
         <p class="govuk-body">
-          If you choose not tell us about them now, you have until {{ 28 | daysInFuture }} to do so. To submit extra conditions after the questionnaire, email <a href="javascript:preventDefault();">CaseOfficers@planninginspectorate.gov.uk</a>.
+          If you choose to not tell us about them now, you have until {{ 28 | daysInFuture }} to do so. To submit extra conditions after the questionnaire, email <a href="javascript:preventDefault();">CaseOfficers@planninginspectorate.gov.uk</a>.
         </p>
         <p class="govuk-body">
           You do not need to tell us about standard conditions.
