AS-4257 Content and question updates for non-determination

--- a/app/assets/sass/pins/lpaq.scss
+++ b/app/assets/sass/pins/lpaq.scss
@@ -19,3 +19,10 @@ ol.lpaq {
 	}
 
 }
+
+@media (min-width: 28.125em) {
+	// Stop text wrappning above tags in task list
+	.app-task-list__task-name {
+		max-width: calc(100% - 140px);
+	}
+}
