--- a/app/views/lpa-questionnaire/fullv2/relevant-policies/emerging-plan-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/relevant-policies/emerging-plan-upload.html
@@ -26,7 +26,11 @@
       <form action="" method="post">
 
         <span class="govuk-caption-l">
-          Upload the Planning Officer's report and relevant policies
+          {% if data["lpaq-"+version+"-nondetermination"] == "Yes" %}
+            Tell us what your decision notice would have said and provide relevant policies   
+          {% else %}
+            Upload the Planning Officer's report and relevant policies
+          {% endif %}
         </span>
         <h1 class="govuk-heading-xl">
           Upload the emerging plan and supporting information
