--- a/app/views/index.html
+++ b/app/views/index.html
@@ -391,7 +391,10 @@
                       <a href="/lpa-questionnaire/fullv2/email/started-refusal" title="">Start from email - Appeal against the refusal of planning application</a>
                     </li>
                     <li>
-                      <a href="/lpa-questionnaire/fullv2/task-list" title="">Start journey from task list</a>
+                      <a href="/lpa-questionnaire/fullv2/task-list" title="">Start refusal journey from task list</a>
+                    </li>
+                    <li>
+                      <a href="/lpa-questionnaire/fullv2/skip/non-determination" title="">Start non-determination journey from task list</a>
                     </li>
                     <br>
                     <!--li>
@@ -399,6 +402,9 @@
                     </li-->
                     <li>
                       <a href="/lpa-questionnaire/fullv2/skip/complex-cya" title="">Start from check your answers (complex answers)</a>
+                    </li>
+                    <li>
+                      <a href="/lpa-questionnaire/fullv2/skip/non-determination-cya" title="">Start from check your answers (non-determination)</a>
                     </li>
                   </ul>
                   <!--details class="govuk-details" data-module="govuk-details">
@@ -416,7 +422,7 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (21)
+                        Jira Tickets (22)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
@@ -442,6 +448,7 @@
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4172" target="_blank">AS-4172 Reset routing for v2 based on flow in Miro</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4193" target="_blank">AS-4193 Interaction design for file uploads without delete functionality</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4199" target="_blank">AS-4199 Check and correct all skip question links in v2</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4257" target="_blank">AS-4257 Content and question updates for non-determination</a></li>
                       </ul>
                     </div>
                   </details>
