AS-4268 Shutter screen if questionnaire already submitted

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -390,6 +390,7 @@
                     <li>
                       <a href="/lpa-questionnaire/fullv2/email/started-refusal" title="">Start from email - Appeal against the refusal of planning application</a>
                     </li>
+                    <br>
                     <li>
                       <a href="/lpa-questionnaire/fullv2/task-list" title="">Start refusal journey from task list</a>
                     </li>
@@ -405,6 +406,10 @@
                     </li>
                     <li>
                       <a href="/lpa-questionnaire/fullv2/skip/non-determination-cya" title="">Start from check your answers (non-determination)</a>
+                    </li>
+                    <br>
+                    <li>
+                      <a href="/lpa-questionnaire/fullv2/shutter/already-submitted" title="">Shutter page - questionnaire already submitted</a>
                     </li>
                   </ul>
                   <!--details class="govuk-details" data-module="govuk-details">
@@ -422,7 +427,7 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (22)
+                        Jira Tickets (23)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
@@ -449,6 +454,7 @@
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4193" target="_blank">AS-4193 Interaction design for file uploads without delete functionality</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4199" target="_blank">AS-4199 Check and correct all skip question links in v2</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4257" target="_blank">AS-4257 Content and question updates for non-determination</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4268" target="_blank">AS-4268 Shutter screen if questionnaire already submitted</a></li>
                       </ul>
                     </div>
                   </details>
