AS-4269 Full questionnaire magic link flow

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -427,7 +427,7 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (23)
+                        Jira Tickets (24)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
@@ -455,6 +455,7 @@
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4199" target="_blank">AS-4199 Check and correct all skip question links in v2</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4257" target="_blank">AS-4257 Content and question updates for non-determination</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4268" target="_blank">AS-4268 Shutter screen if questionnaire already submitted</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4269" target="_blank">AS-4269 Full questionnaire magic link flow</a></li>
                       </ul>
                     </div>
                   </details>
