--- a/app/views/lpa-questionnaire/fullv2/security/sent.html
+++ b/app/views/lpa-questionnaire/fullv2/security/sent.html
@@ -9,7 +9,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Householder planning appeal questionnaire
+        Full planning appeal questionnaire
       </h1>
       <h2 class="govuk-heading-l">Confirm your email address</h2>
       <p class="govuk-body">
@@ -36,7 +36,7 @@
         If you're still having problems, you can contact our customer support team:
       <p>
       <p class="govuk-body">
-        Email: <a href="">enquiries@planninginspectorate.gov.uk</a><br>
+        Email: <a href="javascript:preventDefault();">enquiries@planninginspectorate.gov.uk</a><br>
         Telephone: 0303 444 5000
       <p>
       <!--ul class="govuk-list">
