--- a/app/views/lpa-questionnaire/fullv2/email/magic-link.html
+++ b/app/views/lpa-questionnaire/fullv2/email/magic-link.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-  <p><strong>Subject:</strong> Confirm your email address - householder planning appeal questionnaire</p>
+  <p><strong>Subject:</strong> Confirm your email address - full planning appeal questionnaire</p>
   <p><strong>From:</strong> The Planning Inspectorate</p>
 
   <img src="{{ asset_path }}images/pi-logo.png" width="150"/>
@@ -16,14 +16,16 @@
 
       <p>Dear [name of LPA]</p>
 
-      <p>Click this link to confirm your email address and continue to the questionnaire for planning application 21/05058/FUL:</p>
+      <p><strong>Confirm your email address</strong></p>
+
+      <p>Click this link to confirm your email address and continue to the questionnaire for planning application [application ref]:</p>
       <p>[<a href="/lpa-questionnaire/fullv2/task-list">valid link</a> <a href="/lpa-questionnaire/fullv2/security/email-link-expired">expired link</a>]</p>
 
       <p>The link expires after 15 minutes.</p>
       <p>Once you've confirmed your email address, you can delete this email.</p><br>
-      
+      <br>
       <p>Thank you,</p>
-      <p>The Planning Inspectorate​</p>
+      <p>The Planning Inspectorate</p>
     </div>
   </div>
 
