--- a/app/views/lpa-questionnaire/fullv2/security/email-link-expired.html
+++ b/app/views/lpa-questionnaire/fullv2/security/email-link-expired.html
@@ -9,7 +9,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Householder planning appeal questionnaire
+        Full planning appeal questionnaire
       </h1>
 
       <div class="govuk-notification-banner" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
