--- a/app/views/lpa-questionnaire/fullv2/security/email.html
+++ b/app/views/lpa-questionnaire/fullv2/security/email.html
@@ -1,7 +1,7 @@
 {% extends "layouts/lpa-questionnaire/v9.html" %}
 
 {% block pageTitle %}
-  LPA Questionnaire
+  Full planning appeal questionnaire
 {% endblock %}
 
 {% block content %}
@@ -9,7 +9,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Householder planning appeal questionnaire
+        Full planning appeal questionnaire
       </h1>
 
       <p class="govuk-body">
